# My_Projects

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: python-tests.yml
tests/: authorisation_request_web.py  test_smoke.py
utils/: checking.py  http_methods.py  sqlachemy_util.py
